# Telestorage-Web

./: Cargo.toml  ai_proxy.py  vercel.json
.github/workflows/: main.yml  release.yml
app/: package-lock.json  package.json
app/src/: types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: ai.rs  fs.rs  settings.rs
app/src/components/: AuthWizard.tsx  Dashboard.tsx  FileTypeIcon.tsx
app/src/components/dashboard/: ContextMenu.tsx  FileExplorer.tsx  FileListItem.tsx  SettingsModal.tsx  Sidebar.tsx  TopBar.tsx
app/src/hooks/: useFileDownload.ts  useFileOperations.ts  useFileUpload.ts  useTelegramConnection.ts
app/src/services/: apiBridge.ts
frontend/: package.json  vite.config.ts
frontend/src/: App.css  utils.ts
frontend/src-tauri/src/commands/: settings.rs
frontend/src/components/dashboard/: AiAssistant.tsx  DownloadQueue.tsx  FileCard.tsx  (+7 more)
frontend/src/hooks/: useFileDownload.ts  useFileOperations.ts  useTelegramConnection.ts
frontend/src/services/: apiBridge.ts
frontend/src/utils/: treeUtils.ts
src/: main.rs  models.rs  utils.rs
src/handlers/: auth.rs  preview.rs  streaming.rs
web-server/: Cargo.toml  Dockerfile  vercel.json
web-server/frontend/: fix_auth.cjs  fix_ts.cjs  fix_ts2.cjs  fix_ts3.cjs  package-lock.json  package.json  refactor.cjs  refactor_auth.cjs
web-server/frontend/src/: App.tsx  types.ts
web-server/frontend/src-tauri/: Cargo.toml  tauri.conf.json
web-server/src/: handlers.rs  main.rs  security.rs
web-server/src/handlers/: ai.rs  fs.rs  mod.rs  streaming.rs
(+20 files in other folders)
