[package]
name = "telegram-drive-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
subtle = "2"
sha2 = "0.10"
hmac = "0.12"
reqwest = { version = "0.11", features = ["json"] }
